$Id$

2007-04-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Added checks for strlcat and strlcpy, with
	  replacement functions using the OpenBSD implementations if they are
	  not present.

	* strlcat.c, strlcpy.c: New source files from the OpenBSD source at
	  http://www.openbsd.org/cgi-bin/cvsweb/src/lib/libc/string

	* *.c: replaced most calls to strcat and strncat with strlcat, and
	  calls to strcpy and strncpy with strlcpy.  Two calls to strncpy
	  remain because the source strings are not null terminated.

2007-04-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Check the return status of pcap_dispatch() against -1
	  rather than < 0 to check for error because the use of pcap_breakloop
	  results in a return status of -2, and this is not an error.  Even
	  though we don't use pcap_breakloop, we should still behave correctly
	  if it used in the future.

	* arp-scan.c: Check return status of inet_pton() seperately against
          < 0, which indicates and error, and against == 0, which indicates
	  that the string is not a valid address.  Previously we handled these
	  together with the comparison <= 0.  Also return from add_host()
	  immediately if the host lookup fails.

2007-04-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Check that the target host specification is not
	  an IP network or range, and terminate with an error message if it
	  is.  Some users have mistakenly tried to use arp-fingerprint against
	  a network, and I want to give a better error message in these cases.

	* arp-fingerprint: Remove the default "-N" from the arp-scan command
	  line as it is valid to use a hostname.  Modified the associated
	  manpage so it agrees with this change.

2007-04-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Add ioctl to reduce the bufmod timeout to zero for
	  Solaris (DLPI).  This prevents buffering, and ensures that packets
	  are available immediately.  This allows arp-scan to work on