@@ -184,122 +184,6 @@ make_message(const char *fmt, ...) {
 }
 
 /*
- *	printable -- Convert string to printable form using C-style escapes
- *
- *	Inputs:
- *
- *	string	Pointer to input string.
- *	size	Size of input string.  0 means that string is null-terminated.
- *
- *	Returns:
- *
- *	Pointer to the printable string.
- *
- *	Any non-printable characters are replaced by C-Style escapes, e.g.
- *	"\n" for newline.  As a result, the returned string may be longer than
- *	the one supplied.
- *
- *	This function makes two passes through the input string: one to
- *	determine the required output length, then a second to perform the
- *	conversion.
- *
- *	The pointer returned points to malloc'ed storage which should be
- *	free'ed by the caller when it's no longer needed.
- */
-char *
-printable(const unsigned char *string, size_t size) {
-   char *result;
-   char *r;
-   const unsigned char *cp;
-   size_t outlen;
-   unsigned i;
-/*
- *	If the input string is NULL, return an empty string.
- */
-   if (string == NULL) {
-      result = Malloc(1);
-      result[0] = '\0';
-      return result;
-   }
-/*
- *	Determine required size of output string.
- */
-   if (!size)
-      size = strlen((const char *) string);
-
-   outlen = size;
-   cp = string;
-   for (i=0; i<size; i++) {
-      switch (*cp) {
-         case '\\':
-         case '\b':
-         case '\f':
-         case '\n':
-         case '\r':
-         case '\t':
-         case '\v':
-            outlen++;
-            break;
-         default:
-            if(!isprint(*cp))
-               outlen += 3;
-      }
-      cp++;
-   }
-   outlen++;	/* One more for the ending NULL */
-
-   result = Malloc(outlen);
-
-   cp = string;
-   r = result;
-   for (i=0; i<size; i++) {
-      switch (*cp) {
-         case '\\':
-            *r++ = '\\';
-            *r++ = '\\';
-            break;
-         case '\b':
-            *r++ = '\\';
-            *r++ = 'b';
-            break;
-         case '\f':
-            *r++ = '\\';
-            *r++ = 'f';
-            break;
-         case '\n':
-            *r++ = '\\';
-            *r++ = 'n';
-            break;
-         case '\r':
-            *r++ = '\\';
-            *r++ = 'r';
-            break;
-         case '\t':
-            *r++ = '\\';
-            *r++ = 't';
-            break;
-         case '\v':
-            *r++ = '\\';
-            *r++ = 'v';
-            break;
-         default:
-            if (isprint(*cp)) {
-               *r++ = *cp;	/* Printable character */
-            } else {
-               *r++ = '\\';
-               snprintf(r, 4, "%.3o", *cp);
-               r += 3;
-            }
-            break;
-      }
-      cp++;
-   }
-   *r = '\0';
-
-   return result;
-}
-
-/*
  *	hexstring -- Convert data to printable hex string form
  *
  *	Inputs:
